# kulturella_klubben

./: QUICKSTART.md  README.md  architecture_plan.md  generate_mock_data.py  pyproject.toml  requirements.txt  system_description.md
app/: __init__.py  main.py
app/controllers/: app_controller.py  lottery_controller.py
app/models/: __init__.py  draw_attempt.py  participant.py  prize.py  session_state.py  winner_record.py
app/services/: config_loader.py  draw_engine.py  excel_exporter.py  mock_data_generator.py  participant_repository.py  previous_winners_repository.py  prize_repository.py  session_store.py
app/utils/: time_utils.py
app/views/: __init__.py  current_candidate_widget.py  main_window.py  prize_grid_widget.py  resume_dialog.py  session_status_widget.py  winners_table_widget.py
config/: config.yaml
data/data/participants/: participants.xlsx
data/data/prizes/: prizes.xlsx
data/sessions/2026-05-06/: event_log.jsonl  event_log.xlsx  participants_snapshot.xlsx  prizes_snapshot.xlsx  session_state.json  winners.xlsx
tests/: test_app_controller.py  test_draw_engine.py  test_lottery_controller.py  test_mock_data_generator.py  test_repositories.py  test_session_store.py
